css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    -webkit-tap-highlight-color: transparent;
}

body {
    font-family: 'Lato', sans-serif;
    line-height: 1.6;
    color: white;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: white;
}

button {
    all: unset;
    cursor: pointer;
}

p {
    color: white;
}

/* navbar */
.navbar {
    height: 100px;
    background-color: #333645;
}

.navbar h1 {
    color: #FFC255;
}

.navbar ul {
    display: flex;
}


.navbar a {
    padding: 10px;
    margin: 0 5px
}

.navbar a {
    color: white;
}

.navbar a:hover {
    border-bottom: 1.5px #FFC255 solid;
}

.navbar .flex {
    justify-content: space-between;
    align-items: center;
}

/* hero section */

.hero {
    min-height: 65vh;
    background-color: #333645;
}

.hero .flex {
    min-height: 65vh;
}

.hero .left-container,
.hero .right-container {
    flex-direction: column;
    align-items: flex-start;
}

.hero .left-container {
    justify-content: flex-end;
    flex: 3 1 0;
    padding: 0px 100px 15px 60px;
    /*top right bottom left*/
}

.hero h1 {
    font-size: 5rem;
    translate: 0px 80px;
}

#hero-image {
    align-self: flex-end;
    height: 400px;
}

.links {
    display: flex;
    gap: 20px;
    margin-top: -60px;
}

.links a {
    font-size: 1.8rem;
}

.hero .right-container {
    flex: 2 1 0;
}

.hero .right-container p {
    margin: 10px 0;
    opacity: 60%;
    font-size: 18px;
    line-height: 1.3;

}

.hero .right-container h2 {
    font-size: 35px;
    line-height: 1.2;
    padding: 15px 0;
    color: white;
}

.hero .right-container a {
    color: #FFC255;
    padding: 10px 0;
}

/* Skills Section */
.skills {
    background-color: #242734;
    min-height: 80vh;
}

.skills .container {
    min-height: 80vh;
    height: fit-content;
    overflow: hidden;
}

.skills .left-container {
    flex-direction: column;
    padding: 40px 20px 40px 20px;
    align-items: flex-start;
    flex: 3 1 0;
    align-self: flex-start;
    margin-top: 10vh;
}

.skills .left-container h3 {
    font-size: 2.5rem;
    margin: 20px 0px;
    font-weight: 500;
}

.skill-links {
    display: flex;
}

.skill-links button {
    padding-right: 30px;
    margin-right: 10px;
    font-weight: 300;
    font-size: 18px;
    opacity: 70%;
}

.skill-links button:hover {
    opacity: 100%;
}

.skill-links button.active {
    color: #FFC255;
    opacity: 100%;
}

.skills .right-container {
    flex: 2 1 0;
    margin-top: 10vh;
}

/* change min-height to longest list height */
.skill-list {
    min-height: 65vh;
}

.skill-item {
    display: flex;
    background-color: rgba(0, 0, 0, 0.3);
    width: 375px;
    min-width: 300px;
    margin: 20px 0;
    padding: 7px;
    border-radius: 10px;
    display: none;
}

.skill-item.active {
    display: flex;
}

.skill-icon img {
    width: 50px;
    border-radius: 50%;
    margin: 0 20px 0 8px;
}

.skill-item#item2 img,
.skill-item#item11 img {
    border-radius: 0;
}

.skill-item#item6 img,
.skill-item#item7 img {
    background-color: #ffffff;
}

.skill-title p {
    font-weight: 500;
    font-size: 1.2rem;
}

.skill-desc p {
    font-weight: 300;
    font-size: 1rem;
    opacity: 80%;
}

.skill-info {
    display: flex;
    flex-direction: column;
}

/* Overview Side */
.skills .right-container,
.overview-container {
    flex-direction: column;
}

.skills .right-container {
    align-items: flex-start;
    align-self: flex-start;
    margin-top: 10vh;
    padding: 40px 20px 40px 20px;
}

.skills .right-container h4 {
    font-size: 2.5rem;
    margin: 20px 0px;
    font-weight: 500;
}

#overview-subtitle {
    font-weight: 300;
    font-size: 18px;
    opacity: 70%;
}

.overview-container .card-container {
    display: flex;
    align-self: flex-start;
}

.overview-container {
    margin-top: 20px;
}

.card-container {
    gap: 40px;
}

.score-container {
    padding: 10px 20px;
}

.card-item {
    display: flex;
    flex-direction: column;
    height: 250px;
    width: 250px;
    background-color: rgba(0, 0, 0, 0.3);
    border-radius: 20px;
    align-items: center;
    justify-content: center;
}

.card-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.card-info .text1 {
    font-weight: 500;
    font-size: 20px;
}

.card-info .text2 {
    font-weight: 300;
    opacity: 70%;
    font-size: 20px;
    font-style: italic;
}

.circle-shape {
    border: 10px #FFB347 solid;
    height: 100px;
    width: 100px;
    border-radius: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
}

.circle-shape.item2 {
    border: 10px #FF6B35 solid;
}

.circle-shape p {
    font-size: 24px;
    font-weight: 600;
}

.card-quote {
    display: flex;
    height: 150px;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    align-items: center;
    justify-content: center;
    border-radius: 20px;
    margin-top: 45px;
}

.card-quote p {
    font-weight: 500;
    font-style: italic;
    font-size: 25px;
    padding: 10px 50px;
    opacity: 70%;
}

/* contact section */
.contact {
    background-color: #333645;
    min-height: 80vh;
}

.contact .container {
    align-items: center;
    min-height: 80vh;
}

.contact .left-container {
    flex: 3 1 0;
    justify-content: flex-start;
    padding: 40px 20px 40px 20px;
}

.header-form {
    margin-bottom: 40px;
}

.header-form .title {
    font-size: 2.5rem;
    font-weight: 600;
}

.header-form .description {
    font-size: 18px;
    font-weight: 300;
    opacity: 70%;
}

.contact-form input {
    background-color: #1D1F2A;
    border-radius: 12px 12px 0px 0px;
    padding: 12px 25px;
    margin: 10px;
    width: 25rem;
    font-size: 18px;
    border-color: #FFB347;
    border-width: 0 0 3px 0;
    color: #ffffff;
    outline: none;

}

.contact-form input[placeholder="Message"] {
    height: 100px;

}

.contact-form input[value="Submit"] {
    background-color: #FFB347;
    border-radius: 30px;
    padding: 10px 30px;
    margin-top: 30px;
    color: #000000;
    width: unset;
}

.contact .right-container {
    flex: 2 1 0;
    justify-content: flex-end;
}

/* footer */
footer {
    background-color: #242734;
    min-height: 30vh;
}

footer .container {
    align-items: center;
    min-height: 30vh;
}

footer .title {
    color: #FFC255;
    font-size: 2.2rem;
    font-weight: 600;
}

footer .description {
    opacity: 70%;
    font-size: 18px;
}

footer .social {
    margin-top: 40px;
    margin-left: -20px;
}

footer .links {
    margin-top: unset;
    gap: 0;
}

footer .container .flex {
    flex-direction: column;
}

footer .left-container {
    flex: 3 1 0;
    align-items: flex-start;
    justify-self: center;
    margin-left: 40px;
}

footer .right-container {
    flex: 2 1 0;
    align-items: flex-end;
}

footer ul {
    display: flex;
}

footer a {
    font-size: 1.2rem;
    margin: 0 15px;
    font-weight: 600;
}

footer .right-container p {
    margin-top: 40px;
    margin-right: 15px;
    opacity: 70%;
}


/* utilities */
.container {
    max-width: 1400px;
    margin: 0 auto;
    overflow: auto;
    padding: 0 40px;
}

.flex {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}


/* Mobile Responsive */
@media(max-width: 500px) {

    /* Navbar */
    .navbar {
        height: 140px;
    }

    .navbar .flex {
        flex-direction: column;
        justify-content: center;
        overflow: hidden;
    }

    .navbar ul {
        padding: 10px 10px;
        margin-top: 10px;
        background-color: rgba(0, 0, 0, 0.1);
        border-radius: 20px;
    }

    /* hero section */

    .hero .container {
        flex-direction: column;
        align-items: flex-start;
        padding: 0 20px;
        overflow: hidden;
    }

    .hero .left-container {
        padding: 0 0px;
        align-self: center;
        min-height: unset;
    }

    .hero .right-container {
        padding: 40px 20px;
        min-height: unset;
    }

    .hero h1 {
        font-size: 15vw;
        align-self: center;
        translate: 0px 0px;
    }

    #hero-image {
        align-self: center;
        height: 70vw;
    }

    /* skills */
    .skills .container {
        flex-direction: column;
        padding: 0 20px;
        align-items: center;
        padding-bottom: 100px;
    }

    .skills .left-container {
        padding: 0 20px;
        margin-top: 5vh;

    }

    .skill-links button {
        padding-right: 20px;
        margin: 0 auto;
    }

    .skill-item {
        width: 80vw;
    }

    .skills .right-container {
        padding: 0 20px;
        margin-top: 5px;
    }

    .score-container {
        padding: 10px;
    }

    .card-container {
        gap: 25px;
    }

    .card-item {
        width: 38vw;
        height: 42vw;
    }

    .card-info .text1 {
        font-size: 17px;
    }

    .card-info .text2 {
        font-size: 15px;
    }

    .circle-shape,
    .circle-shape.item2 {
        height: 17vw;
        width: 17vw;
        border-width: 7px;
    }

    .circle-shape p {
        font-size: 22px;
    }

    .card-quote {
        margin-top: 30px;
        padding: 25px 0px;
        height: 120px;
    }

    .card-quote p {
        padding: 0px 30px;
        font-size: 22px;
    }


    /* contact-mobile */
    .contact .container {
        flex-direction: column;
        padding: unset;
    }

    .contact .left-container {
        width: 100vw;
        margin-top: 8vh;
        justify-content: center;
        padding: 0 20px;
    }

    .contact-form input {
        width: 80vw;
    }

    .contact-form input[value="Submit"] {
        width: 80vw;
        border-radius: 10px;
    }

    .contact img {
        width: 100vw;
    }

    /* footer mobile view */
    footer .container {
        flex-direction: column;
        padding: unset;
        padding: 5vh 0;
    }

    footer .left-container {
        align-items: center;
        margin: 0;
    }

    footer .social {
        margin-top: 10px;
        margin-left: 0;
        margin-bottom: 10px;
    }

    footer .right-container {
        margin-top: 40px;
        align-items: center;
    }

}

